--- a/ZuzuEats!/css/style.css
+++ b/ZuzuEats!/css/style.css
@@ -1,5 +1,12 @@
+/*as you can see I have montserrat as my font family but for some reason it doesnt want to work on mac, it works on windows, not sure whats wrong*/
+
+/*i fixed it by adding the link in the head tag*/
+
+
+
+
 #header {
-	font-family: montserrat;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 25px;
 	font-weight: 50px;
 	text-align: center;
@@ -21,7 +28,7 @@
 .menuitems {
 display: inline-block;
 padding: 15px;
-font-family: montserrat;
+font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -87,11 +94,13 @@ text-align: center;
 /*#footer {
 }*/
 
+/*couldnt figure out the code for my footer without messing up the rest of my elements*/
+
 
 
 
 #titlepage {
-	font-family: montserrat;
+	font-family: Montserrat, sans-serif;
 	text-align: center;
 	font-size: 25px;
 	padding-top:30px;
@@ -103,7 +112,7 @@ text-align: center;
 
 
 #maincontent {
-	font-family: montserrat;
+	font-family: Montserrat, sans-serif;
 	text-align: center;
 	margin-left: 20%;
 	margin-right: 20%;
@@ -113,7 +122,7 @@ text-align: center;
 
 
 .images {
-  position: relative;
+/*  position: relative;*/
   width: 500px;
   height: 500px;
   border-style: solid;
@@ -196,7 +205,7 @@ input[type="checkbox"]:checked + label {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  font-family: montserrat;
+  font-family: 'Montserrat', sans-serif;
   padding-top: 20px;
 }
 
@@ -224,5 +233,3 @@ input[type="checkbox"]:checked + label {
 .recipe p {
   font-size: 14px;
 }
-
-
